# lab04

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
_build/formatter_ex_lib/: Makefile  cmake_install.cmake
_build/formatter_lib/: Makefile  cmake_install.cmake
_build/hello_world_application/: Makefile  cmake_install.cmake  hello_world
_build/solver_application/: Makefile  cmake_install.cmake  solver
_build/solver_lib/: Makefile  cmake_install.cmake
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.hpp
formatter_lib/: formatter.cpp  formatter.hpp
hello_world_application/: CMakeLists.txt  hello_world.cpp
solver_application/: CMakeLists.txt  solver.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.hpp
